[gd_scene load_steps=6 format=3 uid="uid://daday0ctffecu"]

[ext_resource type="Script" path="res://framework/interfaces/user_interfaces/basic_mods_manager.gd" id="1_76v0v"]
[ext_resource type="Script" path="res://framework/interfaces/widgets/interface_resizer.gd" id="2_fujls"]
[ext_resource type="PackedScene" uid="uid://b2uhanojuhssd" path="res://framework/interfaces/widgets/basic_header.tscn" id="3_pai25"]
[ext_resource type="PackedScene" uid="uid://b8ble03df5ehg" path="res://framework/interfaces/value_setters/bool_value_setter.tscn" id="4_h4lsi"]
[ext_resource type="PackedScene" uid="uid://bnabgu0s2d4da" path="res://framework/interfaces/blank.tscn" id="4_ltee4"]

[node name="BasicModsManagerInterface" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_76v0v")

[node name="InterfaceResizer" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_fujls")
target = NodePath("..")

[node name="header" parent="." instance=ExtResource("3_pai25")]
layout_mode = 2
title = "TEXT_MODS_MANAGER"

[node name="enable_mods" parent="." instance=ExtResource("4_h4lsi")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
label_text = "TEXT_ENABLE_MODS"

[node name="container" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="list" type="ItemList" parent="container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="blank" parent="container" instance=ExtResource("4_ltee4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_SOME_CHANGES_WILL_TAKE_EFFECT_AFTER_RESTARTING_THE_GAME"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="back_request" from="header" to="." method="_on_header_back_request"]
[connection signal="value_changed" from="enable_mods" to="." method="_on_enable_mods_value_changed"]
[connection signal="empty_clicked" from="container/list" to="." method="_on_list_empty_clicked"]
[connection signal="item_clicked" from="container/list" to="." method="_on_list_item_clicked"]
